Fixing app crash?

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "razzle start",
     "build": "NODE_ENV=production razzle build",
     "test": "razzle test --env=jsdom",
+    "prestart:prod": "yarn build",
     "start:prod": "NODE_ENV=production node build/server.js",
     "create-json": "node ./scripts/create-json.js",
     "heroku-postbuild": "yarn run build",
