--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^16.12.0",
     "react-cx": "^0.1.12",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
     "csvjson": "^5.1.0",
