--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.8.0",
   "license": "MIT",
   "scripts": {
-    "start": "npm run compile-photos; razzle start",
-    "build": "npm run compile-photos; NODE_ENV=production razzle build",
+    "start": "razzle start",
+    "build": "NODE_ENV=production razzle build",
     "test": "razzle test --env=jsdom",
     "prestart:prod": "yarn build",
     "start:prod": "NODE_ENV=production node build/server.js",
