--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-razzle-app",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "license": "MIT",
   "scripts": {
     "start": "razzle start",
@@ -13,25 +13,33 @@
     "server:start": "SET PORT=5005&&SET HOST=172.17.184.122&&SET PUBLIC_PATH='172.17.184.122:5005/'&&razzle start"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
     "axios": "^0.21.1",
+    "babel-preset-razzle": "^4.2.18",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "razzle": "^3.0.0",
+    "html-webpack-plugin": "^4.5.2",
+    "postcss": "^8.4.27",
+    "razzle": "^4.2.18",
+    "razzle-dev-utils": "^4.2.18",
     "razzle-plugin-scss": "^4.0.4",
     "react": "^16.12.0",
     "react-cx": "^0.1.12",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-manifest-plugin": "^4.1.1"
   },
   "devDependencies": {
     "csvjson": "^5.1.0",
     "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^6.0.0",
     "postcss-normalize": "^9.0.0",
-    "sass-loader": "^12.1.0",
-    "webpack": "^4.41.5",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^4.7.2"
   }
 }
