--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-razzle-app",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "MIT",
   "scripts": {
     "start": "razzle start",
@@ -10,7 +10,8 @@
     "start:prod": "NODE_ENV=production node build/server.js",
     "csv-to-json": "node ./scripts/csv-to-json.js",
     "compile-photos": "node ./scripts/dirTree.js ./public/photos",
-    "server:start": "SET PORT=5005&&SET HOST=172.17.184.122&&SET PUBLIC_PATH='172.17.184.122:5005/'&&razzle start"
+    "server:start": "SET PORT=5005&&SET HOST=172.17.184.122&&SET PUBLIC_PATH='172.17.184.122:5005/'&&razzle start",
+    "clean:install": "rm -rf node_modules && npm install"
   },
   "dependencies": {
     "@babel/core": "^7.22.9",
@@ -39,7 +40,7 @@
     "node-sass": "^6.0.0",
     "postcss-normalize": "^9.0.0",
     "sass-loader": "^12.6.0",
-    "webpack": "^5.88.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2"
   }
 }
